Setting things up.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
   <div role="main" id="container">
-    
+    <header>
+      <img src="images/logo.svg" alt="Logo of rock, paper, scissors game." width="100">
+
+      <div id="score-container">
+        <p>Score</p>
+        <h1 id="score">0</h1>
+      </div>
+    </header>
   </div>
 </body>
 </html>
