--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <div role="main" id="container">
     <header>
-      <img src="images/logo.svg" alt="Logo of rock, paper, scissors game." width="100">
+      <img class="desktop" src="images/logo.svg" alt="Logo of rock, paper, scissors game.">
+      <img class="mobile" src="images/logo.svg" alt="Logo of rock, paper, scissors game." width="100">
 
       <div id="score-container">
         <p>Score</p>
