Styling phase 1 of the game. Responsive for mobile and desktop views.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
         <h1 id="score">0</h1>
       </div>
     </header>
+
+    <div id="game">
+      <div id="game__phase__1">
+        <div class="choice"  id="rock">
+          <div class="choice__bg"></div>
+          <img src="images/icon-rock.svg" alt="Rock">
+        </div>
+
+        <div class="choice" id="paper">
+          <div class="choice__bg"></div>
+          <img src="images/icon-paper.svg" alt="Paper">
+        </div>
+
+        <div class="choice" id="scissors">
+          <div class="choice__bg"></div>
+          <img src="images/icon-scissors.svg" alt="Scissors">
+        </div>
+
+        <img id="triangle" src="images/bg-triangle.svg" alt="Game">
+      </div>
+    </div>
   </div>
 </body>
 </html>
