Added modal for both mobile and desktop views.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
   <div role="main" id="container">
+    <div class="desktop" id="overlay"></div>
+    <div id="rules-modal">
+      <div id="rules-heading">
+        <h1>Rules</h1>
+        <img class="desktop close-modal" src="images/icon-close.svg" alt="Close icon">
+      </div>
+      <img src="images/image-rules.svg" alt="Rules of rock, paper, scissors">
+      <img class="mobile close-modal" src="images/icon-close.svg" alt="Close icon">
+    </div>
     <header>
       <img class="desktop" src="images/logo.svg" alt="Logo of rock, paper, scissors game.">
       <img class="mobile" src="images/logo.svg" alt="Logo of rock, paper, scissors game." width="100">
@@ -39,6 +48,8 @@
 
         <img id="triangle" src="images/bg-triangle.svg" alt="Game">
       </div>
+
+      <button id="modal__btn"><p>Rules</p></button>
     </div>
   </div>
 </body>
