Changes. Still working on game functions.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
         <img id="triangle" src="images/bg-triangle.svg" alt="Game">
       </div>
 
+      <div id="game__phase__2">
+        <div id="your-choice">
+          <img id="choice-picked-you" src="images/icon-rock.svg" alt="Choice picked by you">
+          <p>You Picked</p>
+        </div>
+
+        <div id="house-choice">
+          <img id="choice-picked-house" src="images/icon-rock.svg" alt="Choice picked by the house">
+          <p>The House Picked</p>
+        </div>
+      </div>
+
       <button id="modal__btn"><p>Rules</p></button>
     </div>
   </div>
