--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
     <div id="game">
       <div id="game__phase__1">
-        <div class="choice"  id="rock">
-          <div class="choice__bg"></div>
+        <div class="choice choice__icon rock-icon"  id="rock">
+          <div class="choice__icon__bg"></div>
           <img src="images/icon-rock.svg" alt="Rock">
         </div>
 
-        <div class="choice" id="paper">
-          <div class="choice__bg"></div>
+        <div class="choice choice__icon paper-icon" id="paper">
+          <div class="choice__icon__bg"></div>
           <img src="images/icon-paper.svg" alt="Paper">
         </div>
 
-        <div class="choice" id="scissors">
-          <div class="choice__bg"></div>
+        <div class="choice choice__icon scissors-icon" id="scissors">
+          <div class="choice__icon__bg"></div>
           <img src="images/icon-scissors.svg" alt="Scissors">
         </div>
 
@@ -51,8 +51,6 @@
 
       <div id="game__phase__2">
         <div id="your-choice">
-          <img id="choice-picked-you" src="images/icon-rock.svg" alt="Choice picked by you">
-          <p>You Picked</p>
         </div>
 
         <div id="house-choice">
