--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
         <div id="house-choice">
         </div>
+
+        <div id="house-choice-placeholder"></div>
       </div>
 
       <button id="modal__btn"><p>Rules</p></button>
