--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
 
       <div id="game__phase__2">
         <div id="your-choice">
+          <p>You Picked</p>
         </div>
 
         <div id="house-choice">
+          <p>The House Picked</p>
+          <div id="house-choice-placeholder"></div>
         </div>
 
-        <div id="house-choice-placeholder"></div>
       </div>
 
       <button id="modal__btn"><p>Rules</p></button>
