--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
         <div id="house-choice">
           <p>The House Picked</p>
-          <div id="house-choice-placeholder"></div>
+          <div id="house-choice-placeholder-container">
+            <div id="house-choice-placeholder"></div>
+          </div>
         </div>
 
       </div>
