--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
           <p>You Picked</p>
         </div>
 
+        <div id="results">
+          <p id="results-text"></p>
+          <button id="play-again">Play Again</button>
+        </div>
+
         <div id="house-choice">
           <p>The House Picked</p>
           <div id="house-choice-placeholder-container">
