Updated styling for desktop view only.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div id="results">
-          <p id="results-text"></p>
+          <p id="results-text" style="font-size: 48px;"></p>
           <button id="play-again">Play Again</button>
         </div>
 
